[gd_scene load_steps=10 format=3 uid="uid://dkpakmscr0k5s"]

[ext_resource type="PackedScene" uid="uid://1pjkocxmqavc" path="res://GUI/fullscreen_gui_template.tscn" id="1_cgasu"]
[ext_resource type="Script" uid="uid://b1pdqal54sbb6" path="res://GUI/FieldMenu/sub_menu_tricks.gd" id="2_cgasu"]
[ext_resource type="Texture2D" uid="uid://kmhhevuxuqq3" path="res://Battle Scene/Art/Map-ninepatch.png" id="3_2sa5k"]
[ext_resource type="Script" uid="uid://plpi353s56jf" path="res://Battle Scene/Menu Assets/menu.gd" id="4_pq08u"]
[ext_resource type="PackedScene" uid="uid://ct2n8erjfkm7x" path="res://GUI/FieldMenu/player_menu_card.tscn" id="5_2co3q"]
[ext_resource type="PackedScene" uid="uid://dek2hbk6emy24" path="res://GUI/FieldMenu/spell_button.tscn" id="6_oip55"]
[ext_resource type="PackedScene" uid="uid://dvupw2defk84p" path="res://confirmation_window.tscn" id="7_3vo52"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_cgasu"]
load_path = "res://.godot/imported/checkbox_icons.png-cb28ec61a73bb9c0ac431edd0b7d23b7.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_8i088"]
atlas = SubResource("CompressedTexture2D_cgasu")
region = Rect2(6, 0, 6, 6)

[node name="SubMenuTricks" instance=ExtResource("1_cgasu")]
custom_minimum_size = Vector2(320, 180)
script = ExtResource("2_cgasu")

[node name="MarginContainer" parent="." index="1"]
theme_override_constants/margin_bottom = -1

[node name="Options" type="NinePatchRect" parent="MarginContainer/PUT_MENU_HERE" index="0" node_paths=PackedStringArray("buttons_container")]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("3_2sa5k")
region_rect = Rect2(0, 3, 48, 45)
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8
script = ExtResource("4_pq08u")
buttons_container = NodePath("HBoxContainer")

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/PUT_MENU_HERE/Options" index="0"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -67.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
alignment = 1

[node name="Prepare" type="Button" parent="MarginContainer/PUT_MENU_HERE/Options/HBoxContainer" index="0"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
text = "Prepare"
flat = true
alignment = 0

[node name="Forget" type="Button" parent="MarginContainer/PUT_MENU_HERE/Options/HBoxContainer" index="1"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
text = "Forget"
flat = true
alignment = 0

[node name="Title" type="Label" parent="MarginContainer/PUT_MENU_HERE/Options" index="1"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -57.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 3
text = "Menu"
vertical_alignment = 1

[node name="Player" type="NinePatchRect" parent="MarginContainer/PUT_MENU_HERE" index="1"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.96
texture = ExtResource("3_2sa5k")
region_rect = Rect2(0, 3, 48, 45)
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PUT_MENU_HERE/Player" index="0"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/PUT_MENU_HERE/Player/MarginContainer" index="0"]
layout_mode = 2

[node name="PlayerMenuCard" parent="MarginContainer/PUT_MENU_HERE/Player/MarginContainer/HBoxContainer" index="0" instance=ExtResource("5_2co3q")]
layout_mode = 2
focus_mode = 0
disabled = true

[node name="Label" type="Label" parent="MarginContainer/PUT_MENU_HERE/Player/MarginContainer/HBoxContainer" index="1"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 8
text = "FM Cost"

[node name="FMCost" type="Label" parent="MarginContainer/PUT_MENU_HERE/Player/MarginContainer/HBoxContainer" index="2"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
text = "999"

[node name="Spells" type="NinePatchRect" parent="MarginContainer/PUT_MENU_HERE" index="2"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 7.24
texture = ExtResource("3_2sa5k")
region_rect = Rect2(0, 3, 48, 45)
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PUT_MENU_HERE/Spells" index="0"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/PUT_MENU_HERE/Spells/MarginContainer" index="0"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PUT_MENU_HERE/Spells/MarginContainer/HBoxContainer" index="0"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/PUT_MENU_HERE/Spells/MarginContainer/HBoxContainer/VBoxContainer" index="0"]
layout_mode = 2
text = "Lv.1"

[node name="Label2" type="Label" parent="MarginContainer/PUT_MENU_HERE/Spells/MarginContainer/HBoxContainer/VBoxContainer" index="1"]
layout_mode = 2
text = "Lv.2"

[node name="Label3" type="Label" parent="MarginContainer/PUT_MENU_HERE/Spells/MarginContainer/HBoxContainer/VBoxContainer" index="2"]
layout_mode = 2
text = "Lv.3"

[node name="Label4" type="Label" parent="MarginContainer/PUT_MENU_HERE/Spells/MarginContainer/HBoxContainer/VBoxContainer" index="3"]
layout_mode = 2
text = "Lv.4"

[node name="Label5" type="Label" parent="MarginContainer/PUT_MENU_HERE/Spells/MarginContainer/HBoxContainer/VBoxContainer" index="4"]
layout_mode = 2
text = "Lv.5"

[node name="Label6" type="Label" parent="MarginContainer/PUT_MENU_HERE/Spells/MarginContainer/HBoxContainer/VBoxContainer" index="5"]
layout_mode = 2
text = "Lv.6"

[node name="Label7" type="Label" parent="MarginContainer/PUT_MENU_HERE/Spells/MarginContainer/HBoxContainer/VBoxContainer" index="6"]
layout_mode = 2
text = "Lv.7"

[node name="Label8" type="Label" parent="MarginContainer/PUT_MENU_HERE/Spells/MarginContainer/HBoxContainer/VBoxContainer" index="7"]
layout_mode = 2
text = "Lv.8"

[node name="SpellMenu" type="GridContainer" parent="MarginContainer/PUT_MENU_HERE/Spells/MarginContainer/HBoxContainer" index="1" node_paths=PackedStringArray("buttons_container")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_constants/h_separation = 7
columns = 3
script = ExtResource("4_pq08u")
buttons_container = NodePath(".")

[node name="SpellButton" parent="MarginContainer/PUT_MENU_HERE/Spells/MarginContainer/HBoxContainer/SpellMenu" index="0" instance=ExtResource("6_oip55")]
layout_mode = 2
icon = SubResource("AtlasTexture_8i088")

[node name="SpellButton2" parent="MarginContainer/PUT_MENU_HERE/Spells/MarginContainer/HBoxContainer/SpellMenu" index="1" instance=ExtResource("6_oip55")]
layout_mode = 2
icon = SubResource("AtlasTexture_8i088")

[node name="SpellButton3" parent="MarginContainer/PUT_MENU_HERE/Spells/MarginContainer/HBoxContainer/SpellMenu" index="2" instance=ExtResource("6_oip55")]
layout_mode = 2
icon = SubResource("AtlasTexture_8i088")

[node name="SpellButton4" parent="MarginContainer/PUT_MENU_HERE/Spells/MarginContainer/HBoxContainer/SpellMenu" index="3" instance=ExtResource("6_oip55")]
layout_mode = 2
icon = SubResource("AtlasTexture_8i088")

[node name="SpellButton5" parent="MarginContainer/PUT_MENU_HERE/Spells/MarginContainer/HBoxContainer/SpellMenu" index="4" instance=ExtResource("6_oip55")]
layout_mode = 2
icon = SubResource("AtlasTexture_8i088")

[node name="SpellButton6" parent="MarginContainer/PUT_MENU_HERE/Spells/MarginContainer/HBoxContainer/SpellMenu" index="5" instance=ExtResource("6_oip55")]
layout_mode = 2
icon = SubResource("AtlasTexture_8i088")

[node name="SpellButton7" parent="MarginContainer/PUT_MENU_HERE/Spells/MarginContainer/HBoxContainer/SpellMenu" index="6" instance=ExtResource("6_oip55")]
layout_mode = 2
icon = SubResource("AtlasTexture_8i088")

[node name="SpellButton8" parent="MarginContainer/PUT_MENU_HERE/Spells/MarginContainer/HBoxContainer/SpellMenu" index="7" instance=ExtResource("6_oip55")]
layout_mode = 2
icon = SubResource("AtlasTexture_8i088")

[node name="SpellButton9" parent="MarginContainer/PUT_MENU_HERE/Spells/MarginContainer/HBoxContainer/SpellMenu" index="8" instance=ExtResource("6_oip55")]
layout_mode = 2
icon = SubResource("AtlasTexture_8i088")

[node name="SpellButton10" parent="MarginContainer/PUT_MENU_HERE/Spells/MarginContainer/HBoxContainer/SpellMenu" index="9" instance=ExtResource("6_oip55")]
layout_mode = 2
icon = SubResource("AtlasTexture_8i088")

[node name="SpellButton11" parent="MarginContainer/PUT_MENU_HERE/Spells/MarginContainer/HBoxContainer/SpellMenu" index="10" instance=ExtResource("6_oip55")]
layout_mode = 2
icon = SubResource("AtlasTexture_8i088")

[node name="SpellButton12" parent="MarginContainer/PUT_MENU_HERE/Spells/MarginContainer/HBoxContainer/SpellMenu" index="11" instance=ExtResource("6_oip55")]
layout_mode = 2
icon = SubResource("AtlasTexture_8i088")

[node name="SpellButton13" parent="MarginContainer/PUT_MENU_HERE/Spells/MarginContainer/HBoxContainer/SpellMenu" index="12" instance=ExtResource("6_oip55")]
layout_mode = 2
icon = SubResource("AtlasTexture_8i088")

[node name="SpellButton14" parent="MarginContainer/PUT_MENU_HERE/Spells/MarginContainer/HBoxContainer/SpellMenu" index="13" instance=ExtResource("6_oip55")]
layout_mode = 2
icon = SubResource("AtlasTexture_8i088")

[node name="SpellButton15" parent="MarginContainer/PUT_MENU_HERE/Spells/MarginContainer/HBoxContainer/SpellMenu" index="14" instance=ExtResource("6_oip55")]
layout_mode = 2
icon = SubResource("AtlasTexture_8i088")

[node name="SpellButton16" parent="MarginContainer/PUT_MENU_HERE/Spells/MarginContainer/HBoxContainer/SpellMenu" index="15" instance=ExtResource("6_oip55")]
layout_mode = 2
icon = SubResource("AtlasTexture_8i088")

[node name="SpellButton17" parent="MarginContainer/PUT_MENU_HERE/Spells/MarginContainer/HBoxContainer/SpellMenu" index="16" instance=ExtResource("6_oip55")]
layout_mode = 2
icon = SubResource("AtlasTexture_8i088")

[node name="SpellButton18" parent="MarginContainer/PUT_MENU_HERE/Spells/MarginContainer/HBoxContainer/SpellMenu" index="17" instance=ExtResource("6_oip55")]
layout_mode = 2
icon = SubResource("AtlasTexture_8i088")

[node name="SpellButton19" parent="MarginContainer/PUT_MENU_HERE/Spells/MarginContainer/HBoxContainer/SpellMenu" index="18" instance=ExtResource("6_oip55")]
layout_mode = 2
icon = SubResource("AtlasTexture_8i088")

[node name="SpellButton20" parent="MarginContainer/PUT_MENU_HERE/Spells/MarginContainer/HBoxContainer/SpellMenu" index="19" instance=ExtResource("6_oip55")]
layout_mode = 2
icon = SubResource("AtlasTexture_8i088")

[node name="SpellButton21" parent="MarginContainer/PUT_MENU_HERE/Spells/MarginContainer/HBoxContainer/SpellMenu" index="20" instance=ExtResource("6_oip55")]
layout_mode = 2
icon = SubResource("AtlasTexture_8i088")

[node name="SpellButton22" parent="MarginContainer/PUT_MENU_HERE/Spells/MarginContainer/HBoxContainer/SpellMenu" index="21" instance=ExtResource("6_oip55")]
layout_mode = 2
icon = SubResource("AtlasTexture_8i088")

[node name="SpellButton23" parent="MarginContainer/PUT_MENU_HERE/Spells/MarginContainer/HBoxContainer/SpellMenu" index="22" instance=ExtResource("6_oip55")]
layout_mode = 2
icon = SubResource("AtlasTexture_8i088")

[node name="SpellButton24" parent="MarginContainer/PUT_MENU_HERE/Spells/MarginContainer/HBoxContainer/SpellMenu" index="23" instance=ExtResource("6_oip55")]
layout_mode = 2
icon = SubResource("AtlasTexture_8i088")

[node name="Description" type="NinePatchRect" parent="MarginContainer/PUT_MENU_HERE" index="3"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
texture = ExtResource("3_2sa5k")
region_rect = Rect2(0, 3, 48, 45)
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PUT_MENU_HERE/Description" index="0"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 0

[node name="DescriptionLabel" type="Label" parent="MarginContainer/PUT_MENU_HERE/Description/MarginContainer" index="0"]
layout_mode = 2
text = "Description Description Description"

[node name="ConfirmationWindow" parent="." index="2" instance=ExtResource("7_3vo52")]
visible = false
layout_mode = 0
offset_left = 94.0
offset_top = 72.0
offset_right = 214.0
offset_bottom = 117.0

[connection signal="player_changed" from="MarginContainer/PUT_MENU_HERE/Player/MarginContainer/HBoxContainer/PlayerMenuCard" to="." method="_on_player_changed"]
